--- a/MyAppAspNet/Views/Shared/action/add-button.cshtml
+++ b/MyAppAspNet/Views/Shared/action/add-button.cshtml
@@ -1,3 +1,1 @@
-<a title="add new data" class="btn btn-sm btn-success" href=""/add"?>"><i class="fa fa-plus-circle"></i>
-    
-</a>
+<a href='@Url.Action("Create")' class="btn btn-sm btn-success"><i class="fa fa-plus-circle"></i> @Html.Raw(Model)</a> 
