--- a/MyAppAspNet/Views/Shared/action/delete-button.cshtml
+++ b/MyAppAspNet/Views/Shared/action/delete-button.cshtml
@@ -1,9 +1,1 @@
-<a title="delete data" class="btn btn-xs btn-danger text-light" onclick="alertDelete();"> <i class="fa fa-trash"></i>  </a>
-<script>
-    function alertDelete(id) {
-        var r = confirm("Are You Sure Want To Delete?");
-        if (r == true) {
-            window.location = "<?=current_url()?>/delete/" + id;
-        }
-    }
-</script>
+<a href='@Url.Action("Delete",new { id = Model })' class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a> 
