--- a/MyAppAspNet/Views/appdashboard/adminsystem/User/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/User/Index.cshtml
@@ -5,10 +5,8 @@
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
-<h2></h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.Partial("~/Views/Shared/action/add-button.cshtml", "Create New")
 </p>
 <table class="table table-hover">
     <tr>
@@ -72,9 +70,12 @@
             @Html.DisplayFor(modelItem => item.updated_at)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            <a href='' class="btn btn-xs btn-warning text-light"><i class="fas fa-key"></i></a> 
+            <a href='@Url.Action("Index","UserRole",new{ iduser = item.id})' class="btn btn-xs btn-info text-light"><i class="fas fa-shield-alt"></i></a> 
+            <a href='@Url.Action("Index","UserGroupLevel",new{ iduser = item.id})' class="btn btn-xs btn-warning text-light"><i class="fas fa-layer-group"></i></a> 
+            @Html.Partial("~/Views/Shared/action/edit-button.cshtml", item.id) 
+            @Html.Partial("~/Views/Shared/action/details-button.cshtml", item.id) 
+            @Html.Partial("~/Views/Shared/action/delete-button.cshtml", item.id) 
         </td>
     </tr>
 }
