--- a/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
-
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+   @Html.Partial("~/Views/Shared/action/add-button.cshtml", "Create New")
 </p>
 <table class="table">
     <tr>
@@ -17,12 +14,6 @@
         </th>
         <th>
             Note
-        </th>
-        <th>
-            Create At
-        </th>
-        <th>
-            Updated At
         </th>
         <th>Aciton</th>
     </tr>
@@ -36,14 +27,8 @@
             @Html.DisplayFor(modelItem => item.remark)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.created_at)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.updated_at)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.Partial("~/Views/Shared/action/edit-button.cshtml", item.id) |
+            @Html.Partial("~/Views/Shared/action/delete-button.cshtml", item.id)
         </td>
     </tr>
 }
