--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.Partial("~/Views/Shared/action/add-button.cshtml", "Create New")
 </p>
 <table class="table">
     <tr>
