--- a/MyAppAspNet/Views/Shared/_Template.cshtml
+++ b/MyAppAspNet/Views/Shared/_Template.cshtml
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini" style="visibility: hidden">
+    @Html.AntiForgeryToken()
     <div class="wrapper">
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
             <ul class="navbar-nav">
