--- a/MyAppAspNet/Views/Shared/action/edit-button.cshtml
+++ b/MyAppAspNet/Views/Shared/action/edit-button.cshtml
@@ -1,1 +1,1 @@
-<a title="edit data" class="btn btn-xs btn-primary" href=""><i class="fa fa-edit"></i></a>
+<a href='@Url.Action("Edit",new { id = Model })' class="btn btn-xs btn-primary"><i class="fa fa-edit"></i></a> 
