--- a/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/RoleGroupLevel/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/RoleGroupLevel/Index.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
-
-<h2>Index</h2>
 <table class="table">
     <tr>
         <th>
@@ -45,68 +43,66 @@
         <td>
             @if (item.Roles.AccessView)
             {
-                @Html.EditorFor(modelItem => item.isView, new { htmlAttributes = new { @dataid = item.id, @datafield = "isView"}})
+                @Html.EditorFor(modelItem => item.isView, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isView"}})
             }
 
         </td>
         <td>
             @if (item.Roles.AccessAdd)
             {
-                @Html.EditorFor(modelItem => item.isAdd, new { htmlAttributes = new { @dataid = item.id, @datafield = "isAdd" } })
+                @Html.EditorFor(modelItem => item.isAdd, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isAdd" } })
             }
         </td>
         <td>
             @if (item.Roles.AccessEdit)
             {
-                @Html.EditorFor(modelItem => item.isEdit, new { htmlAttributes = new { @dataid = item.id, @datafield = "isEdit" } })
+                @Html.EditorFor(modelItem => item.isEdit, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isEdit" } })
             }
         </td>
         <td>
             @if (item.Roles.AccessDelete)
             {
-                @Html.EditorFor(modelItem => item.isDelete, new { htmlAttributes = new { @dataid = item.id, @datafield = "isDelete" } })
+                @Html.EditorFor(modelItem => item.isDelete, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isDelete" } })
             }
         </td>
         <td>
             @if (item.Roles.AccessPrint)
             {
-                @Html.EditorFor(modelItem => item.isPrint, new { htmlAttributes = new { @dataid = item.id, @datafield = "isPrint" } })
+                @Html.EditorFor(modelItem => item.isPrint, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isPrint" } })
             }
         </td>
         <td>
             @if (item.Roles.AccessCustom)
             {
-                @Html.EditorFor(modelItem => item.isCustom, new { htmlAttributes = new { @dataid = item.id, @datafield = "isCustom" } })
+                @Html.EditorFor(modelItem => item.isCustom, new { htmlAttributes = new { @dataid = item.Roles.id, @datafield = "isCustom" } })
             }
         </td>
     </tr>
 }
 </table>
-@Html.AntiForgeryToken()
 <script>
     $(document).ready(function () {
         $("input[type=checkbox]").on("click",function (e) {
             var idrole = $(this).attr("dataid");
             var field = $(this).attr("datafield");
-            var fieldvalue = +$(this).is(':checked');
+            var fieldvalue = $(this).is(':checked');
             checkedAccess(idrole, field, fieldvalue);
         });
         function checkedAccess(idrole, filed, fieldvalue) {
-
             $.ajax({
                 type: 'POST',
-                url: '@HttpContext.Current.Request.Url.AbsoluteUri/edit',
+                url: '@HttpContext.Current.Request.Url.AbsoluteUri/edit/'+ idrole,
                 data: {
                     __RequestVerificationToken: $("input[name='__RequestVerificationToken']").val(),
-                    id_role: idrole,
-                    field: fieldvalue
+                    "key": filed,
+                    "val": fieldvalue
                 },
                 success: function (data) {
-                    alert(data);
+                    //alert(data);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
-                    alert(xhr.responseText);
-                    alert(thrownError);
+                    //alert(xhr.responseText);
+                    //alert(thrownError);
                 }
             });
         }
