--- a/MyAppAspNet/Views/appdashboard/masterdata/Group/Delete.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Group/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
-<h2>View</h2>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -26,23 +26,6 @@
         <dd>
             @Html.DisplayFor(model => model.remark)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.created_at)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.created_at)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.updated_at)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.updated_at)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
