--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Delete.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
