--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Edit.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Edit.cshtml
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IconMenu, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IconMenu, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Raw(Html.EditorFor(model => model.IconMenu, new { htmlAttributes = new { @class = "form-control" } }))
                 @Html.ValidationMessageFor(model => model.IconMenu, "", new { @class = "text-danger" })
             </div>
         </div>
