--- a/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayFor(modelItem => item.remark)
         </td>
         <td>
-            @Html.Partial("~/Views/Shared/action/edit-button.cshtml", item.id) |
+            @Html.Partial("~/Views/Shared/action/edit-button.cshtml", item.id) 
             @Html.Partial("~/Views/Shared/action/delete-button.cshtml", item.id)
         </td>
     </tr>
