--- a/MyAppAspNet/Views/appdashboard/masterdata/Role/Edit.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Role/Edit.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <label class="control-label col-md-2" for="controller">Have Access</label>
             <div class="col-md-10">
                 <div class="checkbox">
@@ -62,7 +62,7 @@
                     @Html.ValidationMessageFor(model => model.AccessCustom, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
