--- a/MyAppAspNet/Views/Shared/action/delete-button.cshtml
+++ b/MyAppAspNet/Views/Shared/action/delete-button.cshtml
@@ -1,1 +1,4 @@
-<a href='@Url.Action("Delete",new { id = Model })' class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a> 
+@if ((HttpContext.Current.Items["Access"] as MyAppAspNet.Models.UserRole).allow_delete)
+{
+<a href='@Url.Action("Delete", new { id = Model })' class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a> 
+}
