--- a/MyAppAspNet/Views/Shared/action/edit-button.cshtml
+++ b/MyAppAspNet/Views/Shared/action/edit-button.cshtml
@@ -1,1 +1,4 @@
-<a href='@Url.Action("Edit",new { id = Model })' class="btn btn-xs btn-primary"><i class="fa fa-edit"></i></a> 
+@if ((HttpContext.Current.Items["Access"] as MyAppAspNet.Models.UserRole).allow_edit)
+{
+<a href='@Url.Action("Edit", new { id = Model })' class="btn btn-xs btn-primary"><i class="fa fa-edit"></i></a> 
+}
