--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Add.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Add.cshtml
@@ -30,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IDParentMenu, "IDParentMenu", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IDParentMenu", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IDParentMenu", null, "No Parent", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IDParentMenu, "", new { @class = "text-danger" })
             </div>
         </div>
