--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Edit.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Edit.cshtml
@@ -30,10 +30,19 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IDParentMenu, "IDParentMenu", htmlAttributes: new { @class = "control-label col-md-2" })
+            Parent
             <div class="col-md-10">
-                @Html.DropDownList("IDParentMenu", null, "No Parent", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDParentMenu, "", new { @class = "text-danger" })
+                <select name="IDParentMenu" class="form-control">
+                    <option value>No Parent</option>
+                    @foreach (var item in ViewBag.parent)
+                    {
+                        var dir = new Dictionary<String, Object>();
+                        dir["sparator"] = "";
+                        dir["itemid"] = Model.IDParentMenu;
+                        dir["item"] = item;
+                        @Html.Partial("~/Views/appdashboard/masterdata/Menu/Option.cshtml", dir);
+                    }
+                </select>
             </div>
         </div>
 
